--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="/Users/RayFair/Desktop/Web Dev/HTML-personal site/images/renpic3.jpg" style="width:300px;height:400px;" alt="ren faire costume"></td>
+      <td><img src="/cv/images/renpic3.jpg" style="width:300px;height:400px;" alt="ren faire costume"></td>
       <td>
         <h1>Just Ray</h1>
         <p><em>Founder & CEO of <strong><a href="https://www.google.com/search?q=how+to+make+a+website&rlz=1C5GCEM_en&oq=how+to+make+a+website&aqs=chrome..69i57j0i512l4j69i64l3.4499j0j4&sourceid=chrome&ie=UTF-8">Just Ray Devvies</a></strong></em></p>
